Fix problem with sort ordering popup style.
Sorting popup was too high for the
containing element in some browsers:
it was partly cut off. Fix simply
by ensuring element is always high
enough.

Needs more thought for single item
search result lists etc.

--- a/styles/service-tree.less
+++ b/styles/service-tree.less
@@ -189,6 +189,15 @@
       margin-top: 0;
     }
 
+    #search-unavailable-location-info {
+      padding-top: 50px;
+      height: 200px;
+      border-radius: 8px;
+      &:hover {
+        background-color: #fffefd;
+      }
+    }
+
     .header-item {
       margin-top: 2px;
       margin-bottom: 2px;
